--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,6 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.12.0'
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
-    implementation 'com.google.dagger:dagger-android-support:2.19'
-    annotationProcessor 'com.google.dagger:dagger-android-processor:2.19'
+    implementation 'com.google.dagger:dagger:2.19'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.19'
 }
